--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,13 +9,17 @@ services:
     container_name: androidtv-remote-backend
     restart: unless-stopped
     ports:
-      - "5000:5000"
+      - "${BACKEND_PORT:-7432}:7432"
     volumes:
       - ./src:/app/src
       - ./src/api/paired_tvs.json:/app/src/api/paired_tvs.json
     environment:
       - FLASK_ENV=production
       - FLASK_APP=src/app.py
+      - BACKEND_PORT=${BACKEND_PORT:-7432}
+      - BACKEND_URL=${BACKEND_URL:-http://localhost:7432}
+    env_file:
+      - .env
     networks:
       - androidtv-network
 
@@ -27,9 +31,13 @@ services:
     container_name: androidtv-remote-frontend
     restart: unless-stopped
     ports:
-      - "80:80"
+      - "${FRONTEND_PORT:-7433}:80"
     depends_on:
       - backend
+    environment:
+      - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL:-http://localhost:7432}
+    env_file:
+      - .env
     networks:
       - androidtv-network
 
