Add docker-compose.local.yml for environment variable support

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -9,7 +9,7 @@ services:
     container_name: androidtv-remote-backend
     restart: unless-stopped
     ports:
-      - "7432:7432"
+      - "${BACKEND_PORT:-7432}:7432"
     volumes:
       - ./src:/app/src
       - ./src/api/paired_tvs.json:/app/src/api/paired_tvs.json
@@ -18,6 +18,8 @@ services:
       - FLASK_APP=src/app.py
       - BACKEND_PORT=${BACKEND_PORT:-7432}
       - BACKEND_URL=${BACKEND_URL:-http://localhost:7432}
+    env_file:
+      - .env
     networks:
       - androidtv-network
 
@@ -29,11 +31,13 @@ services:
     container_name: androidtv-remote-frontend
     restart: unless-stopped
     ports:
-      - "7433:80"
+      - "${FRONTEND_PORT:-7433}:80"
     depends_on:
       - backend
     environment:
       - REACT_APP_BACKEND_URL=${REACT_APP_BACKEND_URL:-http://localhost:7432}
+    env_file:
+      - .env
     networks:
       - androidtv-network
 
