--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "frontend",
   "version": "0.1.0",
@@ -16,7 +17,8 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "android-tv-remote-control": "file:../react/modules/tv-remote-module"
   },
   "scripts": {
     "start": "react-scripts start",
