--- a/react/modules/tv-remote-module/package.json
+++ b/react/modules/tv-remote-module/package.json
@@ -24,8 +24,8 @@
   "author": "",
   "license": "MIT",
   "peerDependencies": {
-    "react": ">=16.8.0",
-    "react-dom": ">=16.8.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.5",
