Refactor TV remote into a reusable React module
Created a standalone React module for the TV remote control functionality that can be reused in other projects. The module is located in frontend/modules/tv-remote-module and includes:

1. All remote control components extracted from the frontend
2. A clean API with customizable props
3. Proper documentation in README.md
4. Build configuration with rollup

The frontend now directly imports the module components, ensuring compatibility with React 19.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,8 +17,7 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "android-tv-remote-control": "file:../react/modules/tv-remote-module"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
